Spacing fix in CSS

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 	#input-display {
 		height: 75vh;
-		min-height: 600px;
+		min-height: 650px;
 	}
 
 	#pe-boxes,
